// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Artboard /> name defaults to Artboard 1`] = `
<artboard
  name="Artboard"
/>
`;

exports[`<Artboard /> name passes its name 1`] = `
<artboard
  name="bar"
/>
`;

exports[`<Artboard /> renders children 1`] = `
<artboard
  name="Artboard"
>
  <foo>
    <bar />
  </foo>
</artboard>
`;

exports[`<Artboard /> style accepts a StyleSheet ordinal 1`] = `
<artboard
  name="Artboard"
  style={
    Object {
      "flex": 1,
    }
  }
/>
`;

exports[`<Artboard /> style accepts a plain object 1`] = `
<artboard
  name="Artboard"
  style={
    Object {
      "flex": 1,
    }
  }
/>
`;

exports[`<Artboard /> style accepts an array of plain objects and/or StyleSheet ordinals 1`] = `
<artboard
  name="Artboard"
  style={
    Object {
      "flex": 1,
      "flexGrow": 1,
    }
  }
/>
`;
